--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Document</title>
 </head>
 <body class="">
-  <a href="https://js.tensorflow.org"><img  src="/logos/tfjs.jpg" border="3"  width="500" height="200"  style="position: absolute;left: 0px;top: 0px "/></a>
-  <a href="https://pjreddie.com/darknet/yolo/"><img src="/logos/yolo.jpg"  width="500" height="200" style="position: absolute;right: 0px;top: 0px"/></a>
+  <a href="https://js.tensorflow.org"><img  src="./logos/tfjs.jpg" border="3"  width="500" height="200"  style="position: absolute;left: 0px;top: 0px "/></a>
+  <a href="https://pjreddie.com/darknet/yolo/"><img src="./logos/yolo.jpg"  width="500" height="200" style="position: absolute;right: 0px;top: 0px"/></a>
 
   <h1 class="title"></a>Yolov3-tiny-for-detect-people</a></h1>
 
@@ -32,7 +32,7 @@
         <span class="upload-img">Select your own picture</span>
     </label>
     <div id="img-box">
-      <img  src="/images/person.jpg" id="img" />
+      <img  src="./images/person.jpg" id="img" />
       <div id="rect-box"></div>
     </div>
     <ul class="examples">
